tests/integration/error/basic.brl
// Sprint 9: Error Handling - 语法测试
// 验证 int! 语法糖和 Ok/Err 构造器能正确解析

struct Error {
    string message
}

// 返回 Result<int, Error> 的函数
int! divide(int a, int b) {
    if b == 0 {
        return Err(Error { message: "division by zero" })
    }
    return Ok(a / b)
}

// 验证 ? 运算符 (Early Return)
int! test_try(int a, int b) {
    var res = divide(a, b)?
    return Ok(res * 2)
}

int main() {
    var res1 = test_try(10, 2) // Ok(10)
    
    // 如果实现正确，Early Return 应该工作
    var res2 = test_try(10, 0) // Err(...)
    
    // TODO: Assert results (需实现 unwrap)
    return 0
}
